2000-06-28  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* assert.cc (__assert): Reduce dependency on newlib.
	* exec.cc: Eliminate unnecessary inclusion of ctype.h.
	* glob.c: Ditto.
	* hinfo.cc: Ditto.
	* init.cc: Ditto.
	* strace.cc: Ditto.
	* tty.cc: Ditto.
	* grp.cc (parse_grp): Eliminate atoi.
	* passwd.cc (grab_int): Ditto.
	* grp.cc (getgroups): Eliminate str{n,}casecmp.
	* path.cc (get_raw_device_number): Ditto.
	* path.cc (sort_by_native_name): Ditto.
	* spawn.cc (iscmd): Ditto.
	* uinfo.cc (internal_getlogin): Ditto.

Sat Jul  1 11:43:32 2000  Christopher Faylor <cgf@cygnus.com>

	* binmode.c (cygwin_premain0): Fix erroneous clearing of bit.
	* textmode.c (cygwin_premain0): Ditto.

Sat Jul  1 00:24:04 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (_dll_crt0): Renamed from dll_crt0 ().
	* winsup.h: Accomodate above change.
	* cygwin.din: Ditto.
	* lib/cygwin_crt0.c: Ditto.

Fri Jun 30 23:21:40 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Use variables rather than configure constructs where
	appropriate.
	(LIBCOS): Find additional stub library stuff in their own subdirectory.
	* dcrt0.cc: Convert user_data pointer to static __cygwin_user_data
	area.
	(do_global_ctors): Check magic_bisquit for initialization.
	(dll_crt0_1): First group of premain functions prior to fd
	initialization.  Run second group before calling main.
	(dll_crt0 ()): New function, called from new initialization code.
	(dll_crt0 (per_process *uptr)): Call new dll_crt0 () function on
	initialization.
	* debug.cc (thread_stub): Initialize bottom of stack with per-thread
	info.
	* environ.cc (parse_thing): Use binmode global to control
	CYGWIN=binmode behavior.
	* fhandler.cc (fhandler_base::open): Allow explicit setting of __fmode
	to O_BINARY or O_TEXT to override disk mount settings.
	* libcmain.cc: Move to lib subdirectory.
	* libccrt0.cc: Ditto.
	* dll_main.cc: Ditto.
	* dll_entry.cc: Ditto.
	* getopt.c: Ditto.